fixes share overview icon spacing

--- a/ui/inspectors/share.reel/share-overview.reel/_share-overview.css
+++ b/ui/inspectors/share.reel/share-overview.reel/_share-overview.css
@@ -27,7 +27,7 @@
     display: flex;
 }
 
-.ShareOverview-icon svg {
+.ShareOverview-icon > * {
     width: 100%;
     height: 100%;
 }
